# rtd-gtfs-snapshots

./: README.md  fetch.py  gtfs_rt_stable_sort.py  pyproject.toml  update_all_and_commit.sh
.github/workflows/: update-cron.yaml
rtd/: LICENSE.md  update.sh
rtd/realtime/: Alerts.txtpb  TripUpdate.txtpb  VehiclePosition.txtpb
rtd/realtime/alerts/: 39845.txtpb  40074.txtpb  41685.txtpb  42217.txtpb  42812.txtpb  43158.txtpb  44503.txtpb  44626.txtpb  45036.txtpb  45690.txtpb  47057.txtpb  47058.txtpb  47059.txtpb  47307.txtpb  48106.txtpb  48577.txtpb  49109.txtpb  49284.txtpb  49932.txtpb  50281.txtpb  50294.txtpb  50341.txtpb  50343.txtpb  50399.txtpb  50738.txtpb  51026.txtpb  51065.txtpb  51608.txtpb  51743.txtpb  51826.txtpb  51831.txtpb  52246.txtpb  52251.txtpb  53129.txtpb  53131.txtpb  53811.txtpb  53985.txtpb  54023.txtpb  54030.txtpb  54280.txtpb  (+5553 more)
rtd/realtime/vehicles/: 101,103.txtpb  101,105,111.txtpb  101,105,118.txtpb  101,105,120,122.txtpb  101,105,122,399.txtpb  101,105,122,572.txtpb  101,105,122,906.txtpb  101,105,122.txtpb  101,105.txtpb  101,107,118.txtpb  101,107.txtpb  101,110,131.txtpb  101,110.txtpb  101,111,120,756.txtpb  101,111,127.txtpb  (+6574 more)
rtd/static/: areas.txt  calendar.txt  calendar_dates.txt  fare_leg_rules.txt  fare_media.txt  fare_products.txt  fare_transfer_rules.txt  feed_info.txt  routes.txt  stop_areas.txt  stops.txt  trips.txt
via/: update.sh
via/realtime/: Alerts.txtpb  VehiclePosition.txtpb
via/static/: agency.txt  calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
(+42 files in other folders)
