[project]
name = "rtd-gtfs-snapshots"
version = "0.1.0"
description = "Tools for GTFS snapshots"
readme = "README.md"
authors = [
    { name = "Jack Rosenthal", email = "jack@rosenth.al" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp[speedups]>=3.11.14",
    "async-typer>=0.1.8",
    "github-action-utils>=1.1.0",
    "gtfs-realtime-bindings>=1.0.0",
    "protobuf>=6.30.1",
]
